@startuml

skinparam class {
 BackgroundColor<<association>> Darkorange 
 BackgroundColor<<concept>>  Snow 
} 

package LandingGearSystem <<Folder>> {
	class LandingGear <<concept>>  <<enumeration>>  {
	}
	 object LG1 <<individual>> 
	LandingGear *-- LG1 : individualOf 
	class LandingSet <<concept>>  <<enumeration>>  {
	}
	 object LS1 <<individual>> 
	LandingSet *-- LS1 : individualOf 
	 object LS2 <<individual>> 
	LandingSet *-- LS2 : individualOf 
	 object LS3 <<individual>> 
	LandingSet *-- LS3 : individualOf 
	class LG_STATES <<concept>>  <<enumeration>>  {
	}
	 object lg_extended <<individual>> 
	LG_STATES *-- lg_extended : individualOf 
	 object lg_retracted <<individual>> 
	LG_STATES *-- lg_retracted : individualOf 
	LandingSet "3" -- "1" LandingGear : LGofLS > 
	LandingGear "*" -- "1" LG_STATES : > 
	 (LandingGear, LG_STATES) .. lgState
	 class lgState <<association>>  <<variable>>  {
	}
}

@enduml
